[package]
name = "actixweb"
version = "0.1.0"
authors = ["colstuwjx <colstuwjx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-cors = "0.5.4"
derive_more = "0.99.13"
env_logger = "0.8"
log = "0.4"
