[package]
name = "sqlxu"
version = "0.1.0"
authors = ["colstuwjx <colstuwjx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "mysql" ] }
actix-rt = "2.2.0"
